fixed iframe not scrolling problem. scrollbar appears when it's needed.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,9 +58,9 @@ border: black solid;
 .target {
     position: relative;
     width: 100%;
-    padding-bottom: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */
+    padding-bottom: 56.25%; /* proportion value to aspect ratio 16:9 (9 / 16 = 0.5625 or 56.25%) */*/
     height: 100%;
-    overflow: hidden;
+    overflow-y:scroll;
     margin-top: 6%;
 
 }
@@ -71,6 +71,7 @@ border: black solid;
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-y:scroll;
 }
 
 .link {
@@ -205,10 +206,11 @@ footer img {
   font-weight: bolder;
 }
 .vertical-list li{
+  clear: both;
   font-family: Average Sans;
   font-size: .6em;
   font-weight: normal;
-  padding : 1%;
+  padding: 1em;
 }
 
 .vertical-list ol li{
@@ -221,6 +223,24 @@ footer img {
 .vertical-list {
   list-style-type: circle;
   color: black;
-  padding-left: 5%;
+  padding-left: 7%;
+  padding-right: 7%;
   text-align: left;
+}
+
+#carpentry p {
+  padding-left: 10px;
+  padding-top: 0px;
+  margin-top: 0px;
+  margin-left: 20px;
+  font-family: Average Sans;
+  font-size: .5em;
+  font-weight: normal;
+}
+
+#carpentry img {
+  width: 300px;
+  float: left;
+  margin-right: 20px;
+  margin-left: 20px;
 }
